@@ -1,5 +1,9 @@
 2010-05-20  Alan McGovern  <amcgovern@novell.com>
 
+	* StandardCollectionView.cs: Add in some more error checking.
+
+2010-05-20  Alan McGovern  <amcgovern@novell.com>
+
 	* StandardCollectionView.cs: We can only auto-create items if
 	  there's a public parameterless constructor.
 
